# s2s-forecasting

./: .gitignore  README.md  pyproject.toml  verify_num_gpus.py
configs/: aurora.yaml  climaX.yaml  climaX_5.625.yaml  irvine.yaml
docker/: Dockerfile  environment.yml  environment_dec_4.yml  environment_feb12.yml
docs/: DATA_LOADING_GUIDE.md  PREPROCESSING_GUIDE.md
pretrained_weights/: adapt.py
src/data_preprocessing/: nc2np_equally_cmip6.py  nc2np_equally_era5.py  nc2np_era5.py  regrid.py  regrid_nb.ipynb  zarr2np_equally_era5.py  zarr2np_era5.py
src/era5_download/: download_era5_beta.py  download_wb2.sh  era5_sanity_check.py
src/s2s/FuXi-S2S/: compute_fuxi_acc_maps.py  plot_fuxi_acc_maps.py
src/s2s/aurora/: __init__.py  batch.py  module.py  normalisation.py  replay.py  rollout.py  train.py
src/s2s/aurora/model/: aurora.py  decoder.py  encoder.py  fourier.py  patchembed.py  posencoding.py  swin3d.py  util.py
src/s2s/climaX/: arch.py  datamodule.py  module.py  pos_embed.py  train.py
src/s2s/irvine/: module.py  rollout.py  train.py
src/s2s/irvine/model/: batch.py  decoder.py  encoder.py  fourier.py  network.py  patchembed.py  posencoding.py  swin3d.py  util.py
src/s2s/utils/: callbacks.py  compute_climatology_rmse.py  compute_fuxi_acc_maps.py  correlation.py  data_utils.py  datamodule.py  dataset.py  lr_scheduler.py  metrics.py  plot.py  preprocess.py  preprocess_era5.py  preprocess_era5_climatology.py  timeseries.py  trajectory.py  transforms.py
src/scripts/: download_wb2.sh  download_wb2_climatology.sh
tests/: test_parallel_patch_embed.py
