[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "s2s"
version = "0.0.1"
authors =[
    {name="Khalil Virji", email="kvirji@uci.edu"},
]
description = ""
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [

]

[project.urls]
"Homepage" = "https://github.com/khalilv/s2s-forecasting"
"Bug Tracker" = "https://github.com/khalilv/s2s-forecasting/issues"

[tool.setuptools.packages.find]
where = ["src"]
